--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,3 +33,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 10
+    volumes:
+        - my-datavolume:/var/lib/mysql
+volumes:
+        my-datavolume:
