added service discovery

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,12 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
 
+  eureka:
+    build: discovery
+    mem_limit: 350m
+    ports:
+      - "8761:8761"
+
   docker-mysql:
     image: mysql:5.7
     mem_limit: 350m
