--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -1,5 +1,18 @@
 server.port: 7001
 
+spring.application.name: product
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 5
+
+
 ---
 spring.config.activate.on-profile: docker
 
