--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,24 @@ services:
   front:
     build: front
     mem_limit: 350m
-    ports:
-      - "8080:8080"
+    #ports:
+    #  - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
 
   eureka:
     build: discovery
     mem_limit: 350m
+    #ports:
+    #  - "8761:8761"
+
+  gateway:
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    build: gateway
+    mem_limit: 350m
     ports:
-      - "8761:8761"
+      - "8080:8080"
 
   docker-mysql:
     image: mysql:5.7
