configuration working intellij. Discovery eureka failing with docker compose

--- a/config-repo/discovery.yml
+++ b/config-repo/discovery.yml
@@ -16,4 +16,9 @@ eureka:
 
 management.endpoints.web.exposure.include: "*"
 
+---
+spring.config.activate.on-profile: docker
 
+eureka:
+  instance:
+    hostname: eureka
