--- a/config-repo/gateway.yml
+++ b/config-repo/gateway.yml
@@ -2,28 +2,19 @@ server.port: 8080
 
 spring.application.name: gateway
 
-app.eureka-server: localhost
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://${app.eureka-server}:8761/eureka/
-    initialInstanceInfoReplicationIntervalSeconds: 5
-    registryFetchIntervalSeconds: 5
-  instance:
-    leaseRenewalIntervalInSeconds: 5
-    leaseExpirationDurationInSeconds: 5
-
-ribbon.ServerListRefreshInterval: 5000
-
-ribbon.NFLoadBalancerPingInterval: 5
-
 spring.cloud.gateway.routes:
 
   - id: front
     uri: lb://front/products
     predicates:
       - Path=/products/**
+
+  - id: config-server
+    uri: http://${app.config-server}:8888
+    predicates:
+      - Path=/config/**
+    filters:
+      - RewritePath=/config/(?<segment>.*), /$\{segment}
 
   - id: eureka-api
     uri: http://${app.eureka-server}:8761
@@ -79,4 +70,3 @@ logging:
 ---
 spring.config.activate.on-profile: docker
 
-app.eureka-server: eureka
