--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>front</module>
         <module>discovery</module>
         <module>gateway</module>
+        <module>configuration</module>
     </modules>
 
     <properties>
