configuration server fully working. Added retry and AOP dependencies to Eureka and configuration servers

--- a/gateway/src/main/resources/bootstrap.yml
+++ b/gateway/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ config:
 spring:
   application.name: gateway
   cloud.config:
-    failFast: false
+    failFast: true
     retry:
       initialInterval: 3000
       multiplier: 1.3
