--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -13,7 +13,18 @@ eureka:
 ribbon.ServerListRefreshInterval: 5000
 ribbon.NFLoadBalancerPingInterval: 5
 
+spring.rabbitmq:
+  host: localhost
+  port: 5672
+  username: guest
+  password: guest
+
+spring.zipkin.sender.type: rabbit
+spring.sleuth.sampler.probability: 1.0
+
+
 ---
 spring.config.activate.on-profile: docker
 
 app.eureka-server: eureka
+spring.rabbitmq.host: rabbitmq
